Add paging support to get merge candidates. Adjust routes to be more RESTful