@@ -1,11 +1,14 @@
 package gov.cdc.nbs.deduplication.duplicates.service;
 
-
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 import gov.cdc.nbs.deduplication.constants.QueryConstants;
 import gov.cdc.nbs.deduplication.duplicates.model.MatchesRequireReviewResponse;
+import gov.cdc.nbs.deduplication.duplicates.model.MatchesRequireReviewResponse.MatchRequiringReview;
 import gov.cdc.nbs.deduplication.duplicates.model.MatchCandidateData;
 import gov.cdc.nbs.deduplication.duplicates.model.PatientNameAndTimeDTO;
 import gov.cdc.nbs.deduplication.duplicates.model.PersonMergeData;
@@ -15,6 +18,7 @@ import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -32,6 +36,9 @@ class MergeGroupHandlerTest {
   private NamedParameterJdbcTemplate deduplicationTemplate;
 
   @Mock
+  private JdbcTemplate template;
+
+  @Mock
   private PatientRecordService patientRecordService;
 
   @Mock
@@ -39,7 +46,6 @@ class MergeGroupHandlerTest {
 
   @InjectMocks
   private MergeGroupHandler mergeGroupHandler;
-
 
   @Test
   void testGetPotentialMatches() throws SQLException {
@@ -53,9 +59,11 @@ class MergeGroupHandlerTest {
         .thenReturn(patientNameAndTimeDTO1);
     when(patientRecordService.fetchPatientNameAndAddTime("personUid2"))
         .thenReturn(patientNameAndTimeDTO2);
+    when(deduplicationTemplate.getJdbcTemplate()).thenReturn(template);
+    when(template.queryForObject(QueryConstants.COUNT_POSSIBLE_MATCH_PATIENTS, Integer.class)).thenReturn(2);
 
     // Act
-    List<MatchesRequireReviewResponse> result = mergeGroupHandler.getPotentialMatches(0, 10);
+    MatchesRequireReviewResponse result = mergeGroupHandler.getPotentialMatches(0, 10);
 
     verifyPotentialMatchesResponse(result);
   }
@@ -66,14 +74,14 @@ class MergeGroupHandlerTest {
     when(deduplicationTemplate.query(
         eq(QueryConstants.POSSIBLE_MATCH_PATIENTS),
         any(MapSqlParameterSource.class),
-        ArgumentMatchers.<RowMapper<MatchCandidateData>>any()
-    )).thenReturn(Collections.emptyList());
-
+        ArgumentMatchers.<RowMapper<MatchCandidateData>>any())).thenReturn(Collections.emptyList());
+    when(deduplicationTemplate.getJdbcTemplate()).thenReturn(template);
+    when(template.queryForObject(QueryConstants.COUNT_POSSIBLE_MATCH_PATIENTS, Integer.class)).thenReturn(0);
     // Act
-    List<MatchesRequireReviewResponse> result = mergeGroupHandler.getPotentialMatches(0, 10);
+    MatchesRequireReviewResponse result = mergeGroupHandler.getPotentialMatches(0, 10);
 
     assertNotNull(result);
-    assertTrue(result.isEmpty());
+    assertTrue(result.matches().isEmpty());
   }
 
   private PatientNameAndTimeDTO mockPatientNameAndTimeDTO(String patientName) {
@@ -81,7 +89,6 @@ class MergeGroupHandlerTest {
     LocalDateTime dateTime = LocalDateTime.parse("2020-10-01-12-30", formatter);
     return new PatientNameAndTimeDTO(dateTime, patientName);
   }
-
 
   private ResultSet mockResultSetForMatchCandidates() throws SQLException {
     ResultSet rs = mock(ResultSet.class);
@@ -109,25 +116,24 @@ class MergeGroupHandlerTest {
         });
   }
 
-  private void verifyPotentialMatchesResponse(List<MatchesRequireReviewResponse> result) {
+  private void verifyPotentialMatchesResponse(MatchesRequireReviewResponse result) {
     assertNotNull(result);
-    assertEquals(2, result.size());
+    assertEquals(2, result.matches().size());
 
-    MatchesRequireReviewResponse response1 = result.getFirst();
+    MatchRequiringReview response1 = result.matches().get(0);
     assertEquals("personUid1", response1.patientId());
     assertEquals("John Doe", response1.patientName());
     assertEquals("2020-10-01T12:30", response1.createdDate());
     assertEquals("2020-10-01", response1.identifiedDate());
     assertEquals(3, response1.numOfMatchingRecords());
 
-    MatchesRequireReviewResponse response2 = result.get(1);
+    MatchRequiringReview response2 = result.matches().get(1);
     assertEquals("personUid2", response2.patientId());
     assertEquals("Andrew James", response2.patientName());
     assertEquals("2020-10-01T12:30", response2.createdDate());
     assertEquals("2020-10-02", response2.identifiedDate());
     assertEquals(5, response2.numOfMatchingRecords());
   }
-
 
   @Test
   void testUpdateMergeStatus() {
@@ -136,8 +142,7 @@ class MergeGroupHandlerTest {
 
     verify(deduplicationTemplate, times(1)).update(
         eq(QueryConstants.UPDATE_MERGE_STATUS_FOR_GROUP),
-        any(MapSqlParameterSource.class)
-    );
+        any(MapSqlParameterSource.class));
   }
 
   @Test
@@ -155,8 +160,7 @@ class MergeGroupHandlerTest {
     // Mock the call of getMpiIdsByPersonIds method
     when(deduplicationTemplate.query(
         eq(QueryConstants.PATIENT_IDS_BY_PERSON_UIDS),
-        argThat((MapSqlParameterSource params) ->
-            params.getValue("personIds") != null),
+        argThat((MapSqlParameterSource params) -> params.getValue("personIds") != null),
         ArgumentMatchers.<RowMapper<String>>any()))
         .thenReturn(mpiPersonIds);
 
@@ -172,7 +176,7 @@ class MergeGroupHandlerTest {
         any(MapSqlParameterSource.class)))
         .thenReturn(1);
 
-    //Mock the markSingleRemainingRecordAsNoMergeIfExists call
+    // Mock the markSingleRemainingRecordAsNoMergeIfExists call
     when(deduplicationTemplate.update(
         eq(QueryConstants.UPDATE_SINGLE_RECORD),
         any(MapSqlParameterSource.class)))
@@ -212,7 +216,6 @@ class MergeGroupHandlerTest {
         }));
   }
 
-
   @Test
   void testGetPotentialMatchesDetails() {
     long personId = 123L;
@@ -240,36 +243,35 @@ class MergeGroupHandlerTest {
     List<MatchCandidateData> candidates = List.of(candidate1, candidate2);
 
     PatientNameAndTimeDTO dto1 = new PatientNameAndTimeDTO(
-            LocalDateTime.of(2020, 10, 1, 12, 30), "John Doe");
+        LocalDateTime.of(2020, 10, 1, 12, 30), "John Doe");
     PatientNameAndTimeDTO dto2 = new PatientNameAndTimeDTO(
-            LocalDateTime.of(2020, 10, 1, 12, 30), "Andrew James");
+        LocalDateTime.of(2020, 10, 1, 12, 30), "Andrew James");
 
     when(mergeGroupService.fetchAllMatchesRequiringReview()).thenReturn(candidates);
     when(patientRecordService.fetchPatientNameAndAddTime("personUid1")).thenReturn(dto1);
     when(patientRecordService.fetchPatientNameAndAddTime("personUid2")).thenReturn(dto2);
 
     // When
-    List<MatchesRequireReviewResponse> result = mergeGroupHandler.getAllMatchesRequiringReview();
+    List<MatchRequiringReview> result = mergeGroupHandler.getAllMatchesRequiringReview();
 
     // Then
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    MatchesRequireReviewResponse response1 = result.get(0);
+    MatchRequiringReview response1 = result.get(0);
     assertEquals("personUid1", response1.patientId());
     assertEquals("John Doe", response1.patientName());
     assertEquals("2020-10-01T12:30", response1.createdDate());
     assertEquals("2020-10-01", response1.identifiedDate());
     assertEquals(3, response1.numOfMatchingRecords());
 
-    MatchesRequireReviewResponse response2 = result.get(1);
+    MatchRequiringReview response2 = result.get(1);
     assertEquals("personUid2", response2.patientId());
     assertEquals("Andrew James", response2.patientName());
     assertEquals("2020-10-01T12:30", response2.createdDate());
     assertEquals("2020-10-02", response2.identifiedDate());
     assertEquals(5, response2.numOfMatchingRecords());
   }
-
 
   private List<PersonMergeData> createMockPersonMergeData() {
     return List.of(
@@ -280,16 +282,13 @@ class MergeGroupHandlerTest {
             Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList(),
-            Collections.emptyList()
-        )
-    );
+            Collections.emptyList()));
   }
 
   private void mockPossibleMatchesOfPatient(long personId, List<String> possibleMatchesMpiIds) {
     when(deduplicationTemplate.query(
         eq(QueryConstants.POSSIBLE_MATCH_IDS_BY_PATIENT_ID),
-        argThat((MapSqlParameterSource params) ->
-            Objects.equals(params.getValue("personUid"), personId)),
+        argThat((MapSqlParameterSource params) -> Objects.equals(params.getValue("personUid"), personId)),
         ArgumentMatchers.<RowMapper<String>>any()))
         .thenReturn(possibleMatchesMpiIds);
   }
@@ -297,8 +296,8 @@ class MergeGroupHandlerTest {
   private void mockPersonIdsByMpiIds(List<String> possibleMatchesMpiIds, List<String> npsPersonIds) {
     when(deduplicationTemplate.query(
         eq(QueryConstants.PERSON_UIDS_BY_MPI_PATIENT_IDS),
-        argThat((MapSqlParameterSource params) ->
-            Objects.equals(params.getValue("mpiPersonIds"), possibleMatchesMpiIds)),
+        argThat(
+            (MapSqlParameterSource params) -> Objects.equals(params.getValue("mpiPersonIds"), possibleMatchesMpiIds)),
         ArgumentMatchers.<RowMapper<String>>any()))
         .thenReturn(npsPersonIds);
   }
@@ -314,6 +313,5 @@ class MergeGroupHandlerTest {
     assertEquals("2023-01-01", firstResult.asOfDate());
     assertEquals("test comment", firstResult.comments());
   }
-
 
 }
